force-app/main/default/objects/Brand__c/fields/BrandCode__c.field-meta.xml
<CustomField>
    <fullName>BrandCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BrandCode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>