force-app/main/default/objects/Brand__c/fields/BrandFamily__c.field-meta.xml
<CustomField>
    <fullName>BrandFamily__c</fullName>
    <description>Feed Outbound- Brand</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BrandFamily</label>
    <length>255</length>
    <type>Text</type>
</CustomField>