force-app/main/default/objects/Brand__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>