force-app/main/default/objects/Brand__c/fields/CodeCategory__c.field-meta.xml
<CustomField>
    <fullName>CodeCategory__c</fullName>
    <description>Feed Outbound- Brand</description>
    <formula>&apos;BRANDS&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Category</label>
    <type>Text</type>
</CustomField>