force-app/main/default/objects/Brand__c/fields/CodeType__c.field-meta.xml
<CustomField>
    <fullName>CodeType__c</fullName>
    <description>Feed Outbound- Brand</description>
    <formula>&apos;ALL&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Type</label>
    <type>Text</type>
</CustomField>