force-app/main/default/objects/Brand__c/fields/CRC_Operating_Company__c.field-meta.xml
<CustomField>
    <fullName>CRC_Operating_Company__c</fullName>
    <label>CRC Operating Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JMC</fullName>
            </value>
            <value>
                <fullName>NAT_SHERMAN</fullName>
            </value>
            <value>
                <fullName>NUMARK</fullName>
            </value>
            <value>
                <fullName>NUMRK</fullName>
            </value>
            <value>
                <fullName>PMIP</fullName>
            </value>
            <value>
                <fullName>PMPR</fullName>
            </value>
            <value>
                <fullName>PMUSA</fullName>
            </value>
            <value>
                <fullName>USST</fullName>
            </value>
            <value>
                <fullName>USSTC</fullName>
            </value>
            <value>
                <fullName>USSTH</fullName>
            </value>
            <value>
                <fullName>USSTN</fullName>
            </value>
            <value>
                <fullName>USSTP</fullName>
            </value>
            <value>
                <fullName>NJOY</fullName>
            </value>
            <value>
                <fullName>USSTV</fullName>
            </value>
            <value>
                <fullName>PMUSAH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>