force-app/main/default/objects/Brand__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brand Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>