force-app/main/default/objects/Brand__c/fields/DisplayDescription__c.field-meta.xml
<CustomField>
    <fullName>DisplayDescription__c</fullName>
    <description>Feed Outbound - Hard Code empty value.</description>
    <formula>Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DisplayDescription</label>
    <type>Text</type>
</CustomField>