force-app/main/default/objects/Brand__c/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <description>Feed Outbound - Hardcode value &apos;0&apos;</description>
    <formula>&apos;0&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DisplayOrder</label>
    <type>Text</type>
</CustomField>