force-app/main/default/objects/Brand__c/fields/FormName__c.field-meta.xml
<CustomField>
    <fullName>FormName__c</fullName>
    <formula>&apos;BRANDMAINT&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Name</label>
    <type>Text</type>
</CustomField>