force-app/main/default/objects/Brand__c/fields/IsCorrespondence__c.field-meta.xml
<CustomField>
    <fullName>IsCorrespondence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCorrespondence</label>
    <type>Checkbox</type>
</CustomField>