force-app/main/default/objects/Brand__c/fields/ModuleName__c.field-meta.xml
<CustomField>
    <fullName>ModuleName__c</fullName>
    <description>Feed Outbound -Brand</description>
    <formula>&apos;ALTRIA&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module Name</label>
    <type>Text</type>
</CustomField>