force-app/main/default/objects/Brand__c/fields/Op_Company__c.field-meta.xml
<CustomField>
    <fullName>Op_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>OpCo</label>
    <referenceTo>Operating_Company__c</referenceTo>
    <relationshipLabel>Brands</relationshipLabel>
    <relationshipName>Brands</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>