force-app/main/default/objects/Brand__c/fields/ProductLineCode__c.field-meta.xml
<CustomField>
    <fullName>ProductLineCode__c</fullName>
    <description>Feed Outbound - Product Line Code</description>
    <formula>Product_Line__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductLineCode</label>
    <type>Text</type>
</CustomField>