force-app/main/default/objects/Brand__c/fields/ProductLineFlag__c.field-meta.xml
<CustomField>
    <fullName>ProductLineFlag__c</fullName>
    <formula>&apos;0&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductLineFlag</label>
    <type>Text</type>
</CustomField>