force-app/main/default/objects/Brand__c/fields/ScreenName__c.field-meta.xml
<CustomField>
    <fullName>ScreenName__c</fullName>
    <formula>&apos;GLOBAL&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Screen Name</label>
    <type>Text</type>
</CustomField>