force-app/main/default/objects/Brand__c/fields/USTDateType__c.field-meta.xml
<CustomField>
    <fullName>USTDateType__c</fullName>
    <description>Feed Outbound -Brand</description>
    <encryptionScheme>None</encryptionScheme>
    <label>USTDateType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>