force-app/main/default/objects/Brand__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>BrandCode__c</columns>
    <columns>Description__c</columns>
    <columns>IsActive__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Product_Line__c</columns>
    <columns>IsCorrespondence__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>ProductLineCode__c</columns>
    <columns>Operating_Company__c</columns>
    <columns>Op_Company__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All20231207-03</label>
</ListView>