force-app/main/default/objects/Brand__c/listViews/Brand_Correspondence.listView-meta.xml
<ListView>
    <fullName>Brand_Correspondence</fullName>
    <columns>NAME</columns>
    <columns>BrandCode__c</columns>
    <columns>BrandFamily__c</columns>
    <columns>Code__c</columns>
    <columns>CodeCategory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCorrespondence__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Brand Correspondence</label>
</ListView>