force-app/main/default/objects/Brand__c/listViews/Brands.listView-meta.xml
<ListView>
    <fullName>Brands</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Code__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>IsActive__c</columns>
    <columns>BrandCode__c</columns>
    <columns>Product_Line__c</columns>
    <columns>CRC_Operating_Company__c</columns>
    <columns>Operating_Company__c</columns>
    <columns>Op_Company__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>PLOOM</value>
    </filters>
    <label>Brands - JW</label>
</ListView>